--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
     // Junit4
     testImplementation 'junit:junit:4.12'
     // Espresso
@@ -46,5 +48,5 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
     // Kapt
     kapt 'com.android.databinding:compiler:3.1.2'
-    kapt 'com.google.guava:guava:19.0'
+    kapt 'com.google.guava:guava:22.0'
 }
