--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
     ext.kotlin_version = '1.2.30'
+/*
+    ext.builconfig = [
+        'compileSdk': 27,
+        'minSdk' : 20
+    ]
+
+    ext.versions = [
+        'supportLibrary' : '27.1.1',
+        'kotlin_version' : '1.2.30'
+    ]
+*/
     repositories {
         google()
         jcenter()
